# hw_django

./: .env.sample  data.json  pyproject.toml  requirements.txt  shell_cmd
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_is_published_blog_view_count_alter_blog_slug.py  0003_remove_blog_modify_date_alter_blog_title.py
catalog/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_student_options.py  0003_student_is_active.py  0004_category_product.py  0005_category_created_at.py  0006_alter_category_options_remove_category_created_at.py  0007_alter_product_create_date_alter_product_modify_date.py  0008_alter_product_create_date.py  0009_contacts.py  0010_alter_product_image.py  0011_delete_student_alter_contacts_name_and_more.py  0012_alter_product_create_date_alter_product_modify_date.py  0013_alter_product_create_date_alter_product_modify_date.py  0014_product_count_views_product_is_published.py  0015_product_slug.py  0016_alter_product_image_alter_product_is_published_and_more.py  0017_alter_product_name.py  0018_alter_product_is_published.py  0019_version.py  0020_alter_version_options.py  0021_product_user.py  0022_rename_user_product_owner.py
catalog/templatetags/: custom_tags.py
config/: settings.py  urls.py
main/: models.py  urls.py  views.py
users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_is_verified_user_verification_key.py  0003_alter_user_phone.py
(+27 files in other folders)
