[tool.poetry]
name = "hw-django"
version = "0.1.0"
description = ""
authors = ["grbcas <grbcas@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_django"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.7"
pillow = "^10.0.0"
users = "^1.0.dev0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
